# RAMPART-FL

./: .gitignore  Pipfile  README.md  clientapp.Dockerfile  docker-compose-10.yaml  docker-compose-20.yaml  generate_compose.py  pyproject.toml  serverapp.Dockerfile
logs/20250804_2000/: holdout_test_set.csv  rl_training_data.csv
logs/20250804_2100/: min_max_scaler.pkl
src/: baseline_model_tuning.py  client_app.py  participant_selection.py  rl_agent.py  rl_data_logger.py  server_app.py  task.py
src/datasets/Train_Test_datasets/Train_Test_Linux_dataset/: Train_test_linux_disk.csv  Train_test_linux_memory.csv
visualization/: evaluate_final_model.py  plot_generator.py  plot_overfitting_analysis.py  plot_rl_metrics.py
